src/test/testData/AnnotatorTestData.java
public class Test {
    public static void main(String[] args) {
        System.out.println("irul:website");
        System.out.println("irul:key with spaces");
        System.out.println("irul:<error descr="Unresolved property">websit</error>");
    }
}
